# hri_skeletons

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
hri_skeletons/: run  urdf_generator.py
hri_skeletons/pose_extractor/: CMakeLists.txt
