<?xml version="1.0"?>
<package format="2">
  <name>hri_skeletons</name>
  <version>0.1.0</version>
  <description>The hri_skeletons package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="severin.lemaignan@brl.ac.uk">Séverin Lemaignan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/3d_skeletons</url> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>rospy</depend> -->
  <!-- <depend>rosparam</depend> -->
  <!-- <depend>xacro</depend> -->
  <depend>robot_state_publisher</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>hri_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
