<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hri_skeletons</name>
  <version>0.1.0</version>
  <description>The hri_skeletons package</description>

  <maintainer email="severin.lemaignan@brl.ac.uk">Séverin Lemaignan</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>hri_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>openvino</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
